--- a/WhereAreYou/res/layout/main.xml
+++ b/WhereAreYou/res/layout/main.xml
@@ -3,53 +3,59 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    android:focusable="true"
+    android:focusableInTouchMode="true">
+    
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
+   
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+   	<LinearLayout
+       	android:layout_width="fill_parent"
+       	android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+   		<CheckBox
+   		    android:id="@+id/enableCheckBox"
+   		    android:layout_width="wrap_content"
+   		    android:layout_height="wrap_content"
+   		    android:layout_weight="1"
+   		    android:text="Enable Location Reply" />
 
-            <CheckBox
-                android:id="@+id/EnableCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Enable Location Reply" />
+	</LinearLayout>
+
+   	<LinearLayout
+   	    android:layout_width="fill_parent"
+   	    android:layout_height="292dp"
+   	    android:layout_weight="38.48"
+   	    android:orientation="vertical" >
 
-        </LinearLayout>
+   		<LinearLayout
+   		    android:layout_width="fill_parent"
+   		    android:layout_height="wrap_content"
+   		    android:layout_weight="1" >
 
-    </LinearLayout>
+   			<TextView
+   			    android:id="@+id/textView1"
+   			    android:layout_width="wrap_content"
+   			    android:layout_height="wrap_content"
+   			    android:layout_weight="1"
+   			    android:text="Password"
+   			    android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+   			<EditText
+   			    android:id="@+id/passwordText1"
+   			    android:layout_width="wrap_content"
+   			    android:layout_height="wrap_content"
+   			    android:layout_weight="1"
+   			    android:ems="10" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Password"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+   			    <requestFocus />
+   			</EditText>
 
-        <EditText
-            android:id="@+id/passwordText1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10" >
+   		</LinearLayout>
 
-            <requestFocus />
-        </EditText>
-
-    </LinearLayout>
-
+   	</LinearLayout>
+   
 </LinearLayout>
