--- a/WhereAreYou/res/layout/main.xml
+++ b/WhereAreYou/res/layout/main.xml
@@ -23,6 +23,13 @@
    		    android:layout_weight="1"
    		    android:text="Enable Location Reply" />
 
+   		<Button
+   		    android:id="@+id/testButton"
+   		    android:layout_width="wrap_content"
+   		    android:layout_height="wrap_content"
+   		    android:layout_weight="1"
+   		    android:text="Test" />
+
 	</LinearLayout>
 
    	<LinearLayout
