--- a/WhereAreYou/res/layout/main.xml
+++ b/WhereAreYou/res/layout/main.xml
@@ -4,65 +4,63 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
     android:focusable="true"
-    android:focusableInTouchMode="true">
-    
+    android:focusableInTouchMode="true">
+
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello" />
-   
 
-   	<LinearLayout
-       	android:layout_width="fill_parent"
-       	android:layout_height="wrap_content" >
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
-   		<CheckBox
-   		    android:id="@+id/enableCheckBox"
-   		    android:layout_width="wrap_content"
-   		    android:layout_height="wrap_content"
-   		    android:layout_weight="1"
-   		    android:text="Enable Location Reply" />
+        <CheckBox
+            android:id="@+id/enableCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Respond to Text Messages Automatically (if they contain the password below)." />
 
-   		<Button
-   		    android:id="@+id/testButton"
-   		    android:layout_width="wrap_content"
-   		    android:layout_height="wrap_content"
-   		    android:layout_weight="1"
-   		    android:text="Test" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
 
-	</LinearLayout>
-
-   	<LinearLayout
-   	    android:layout_width="fill_parent"
-   	    android:layout_height="292dp"
-   	    android:layout_weight="38.48"
-   	    android:orientation="vertical" >
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Password"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
-   		<LinearLayout
-   		    android:layout_width="fill_parent"
-   		    android:layout_height="wrap_content"
-   		    android:layout_weight="1" >
+            <EditText
+                android:id="@+id/passwordText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10" >
 
-   			<TextView
-   			    android:id="@+id/textView1"
-   			    android:layout_width="wrap_content"
-   			    android:layout_height="wrap_content"
-   			    android:layout_weight="1"
-   			    android:text="Password"
-   			    android:textAppearance="?android:attr/textAppearanceLarge" />
+                <requestFocus />
+            </EditText>
+        </LinearLayout>
 
-   			<EditText
-   			    android:id="@+id/passwordText1"
-   			    android:layout_width="wrap_content"
-   			    android:layout_height="wrap_content"
-   			    android:layout_weight="1"
-   			    android:ems="10" >
+        <Button
+            android:id="@+id/testButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Test" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/msgText"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.71"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-   			    <requestFocus />
-   			</EditText>
-
-   		</LinearLayout>
-
-   	</LinearLayout>
-   
 </LinearLayout>
