Updated User Interface to add timeout allowance for GPS fix, and checkbox to determine whether GPS is used (otherwise uses Network_Provider).

--- a/WhereAreYou/res/layout/main.xml
+++ b/WhereAreYou/res/layout/main.xml
@@ -23,6 +23,35 @@
             android:layout_weight="1"
             android:text="Respond to Text Messages Automatically (if they contain the password below)." />
 
+        <CheckBox
+            android:id="@+id/useGPSCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Use GPS for Location (more accurate, but uses more battery power)" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="GPS Fix Timeout (sec)"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/timeOutText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number" />
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
